modified tab navigator styles and designed home screen

--- a/ios/TadbeerApp/Info.plist
+++ b/ios/TadbeerApp/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,47 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Apercu Black.ttf</string>
+		<string>Apercu Bold Italic.otf</string>
+		<string>Apercu Bold.ttf</string>
+		<string>Apercu Italic.otf</string>
+		<string>Apercu Light Italic.otf</string>
+		<string>Apercu Light.otf</string>
+		<string>Apercu Medium Italic.otf</string>
+		<string>Apercu Medium.ttf</string>
+		<string>Apercu Mono.otf</string>
+		<string>Apercu Pro Bold Italic.otf</string>
+		<string>Apercu Pro Bold.otf</string>
+		<string>Apercu Pro Italic.otf</string>
+		<string>Apercu Pro Light Italic.otf</string>
+		<string>Apercu Pro Light.otf</string>
+		<string>Apercu Pro Medium Italic.otf</string>
+		<string>Apercu Pro Medium.otf</string>
+		<string>Apercu Pro Mono.otf</string>
+		<string>Apercu Pro Regular.otf</string>
+		<string>Apercu Regular.ttf</string>
+		<string>Dubai-Bold.ttf</string>
+		<string>Dubai-Light.ttf</string>
+		<string>Dubai-Medium.ttf</string>
+		<string>Dubai-Regular.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 </dict>
 </plist>
