--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
@@ -20,8 +21,9 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-reanimated": "^1.7.0",
+    "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
+    "react-native-screens": "^2.3.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
