--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-side-drawer": "^1.2.5",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
