--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-side-drawer": "^1.2.5",
+    "react-native-swipe-up-down": "^1.0.7",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
