--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-bottom-navigation": "^1.0.5",
+    "react-native-modal": "^11.5.4",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^0.7.3",
